--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       font-family: 'Inter', sans-serif;
     }
     body {
-      background: linear-gradient(to bottom right, #f0f4ff, #e0eafc);
-      color: #1a1a1a;
+      background: #f9f9f9;
+      color: #212121;
       line-height: 1.6;
     }
     header {
-      background-color: #3f51b5;
+      background-color: #1b2a49;
       color: white;
       padding: 2rem;
       text-align: center;
@@ -29,7 +29,7 @@
     nav {
       display: flex;
       justify-content: center;
-      background-color: #283593;
+      background-color: #2c3e50;
     }
     nav a {
       color: white;
@@ -38,7 +38,7 @@
       font-weight: 600;
     }
     nav a:hover {
-      background-color: #1a237e;
+      background-color: #1a252f;
     }
     section {
       padding: 2rem;
@@ -48,7 +48,7 @@
     footer {
       text-align: center;
       padding: 1rem;
-      background-color: #3f51b5;
+      background-color: #1b2a49;
       color: white;
       font-size: 0.9rem;
     }
@@ -56,7 +56,7 @@
       background: white;
       padding: 1.5rem;
       margin: 1rem 0;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
       border-radius: 10px;
     }
   </style>
@@ -77,7 +77,7 @@
   <section id="about">
     <div class="card">
       <h2>About Me</h2>
-      <p>I’m a molecular biologist focused on RNA-based regulation in the gut microbiota. My work combines wet lab experimentation with bioinformatics to understand how microbial communities interact with hosts. I’m currently based at [Your Institute], and have received support from national and international grant programs.</p>
+      <p>I am a molecular microbiologist specializing in RNA-based regulatory mechanisms in gut microbial ecosystems. My research integrates microbiology, biochemistry, and computational methodologies to investigate host–microbe interactions at the molecular level. As of April 1st, 2025, I have been appointed as a Group Leader at the Institute of Biochemistry and Biophysics, Polish Academy of Sciences. In parallel with my academic pursuits, I provide professional consulting services in the following areas: (a) strategic planning and development of competitive research grants, (b) laboratory setup and operational management, (c) RNA sequencing and bioinformatic analysis, and (d) transcriptome annotation and interpretation.</p>
     </div>
   </section>
 
